Más correcciones para Bootstrap 5.

--- a/Core/View/Login/TwoFactor.html.twig
+++ b/Core/View/Login/TwoFactor.html.twig
@@ -26,7 +26,7 @@
                                            autofocus/>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-block btn-primary mb-4">
+                            <button type="submit" class="btn w-100 btn-primary mb-4">
                                 {{ trans('login') }}
                             </button>
                         </div>
