--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -145,13 +145,13 @@
                             <div class="row">
                                 <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('purchases')"
-                                            class="btn btn-spin-action btn-block btn-secondary btn-spin-action">
+                                            class="btn btn-spin-action w-100 btn-secondary btn-spin-action">
                                         {{ trans('purchases') }}
                                     </button>
                                 </div>
                                 <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('sales')"
-                                            class="btn btn-spin-action btn-block btn-primary btn-spin-action">
+                                            class="btn btn-spin-action w-100 btn-primary btn-spin-action">
                                         {{ trans('sales') }}
                                     </button>
                                 </div>
