--- a/Core/View/Tab/DocFiles.html.twig
+++ b/Core/View/Tab/DocFiles.html.twig
@@ -59,7 +59,7 @@
                             {% else %}
                                 <div class="ps-3 pt-3 pe-3">
                                     <a href="{{ file.url('download-permanent') }}" target="_blank"
-                                       class="btn btn-block btn-lg btn-secondary">
+                                       class="btn w-100 btn-lg btn-secondary">
                                         {% if file.isPdf() %}
                                             <i class="far fa-file-pdf fa-fw"></i>
                                         {% elseif file.isVideo() %}
