--- a/Core/View/Login/Login.html.twig
+++ b/Core/View/Login/Login.html.twig
@@ -79,7 +79,7 @@
                     </div>
                     <div class="modal-body">
                         <a href="https://facturascripts.com/publicaciones/he-olvidado-mi-contrasena" rel="nofollow"
-                           target="_blank" class="btn btn-block btn-link mb-3">
+                           target="_blank" class="btn w-100 btn-link mb-3">
                             {{ trans('need-help-password') }}
                         </a>
                         <div class="mb-3">
@@ -122,7 +122,7 @@
                         </div>
                     </div>
                     <div class="modal-footer">
-                        <button type="submit" class="btn btn-primary">{{ trans('save') }}</button>
+                        <button type="submit" class="btn btn-primary w-100">{{ trans('save') }}</button>
                     </div>
                 </div>
             </div>
