Más correcciones para Bootstrap 5.

--- a/Core/View/CopyProducto.html.twig
+++ b/Core/View/CopyProducto.html.twig
@@ -5,7 +5,7 @@
         <div class="row">
             <div class="col">
                 <h1 class="h3">
-                    <i class="fa-solid fa-cut"></i> {{ fsc.title }}
+                    <i class="fa-solid fa-cut me-2"></i> {{ fsc.title }}
                 </h1>
                 <p>{{ trans('copy-p') }}</p>
                 <form method="post" onsubmit="animateSpinner('add')">
@@ -15,7 +15,7 @@
                     <input type="hidden" name="model" value="{{ fsc.modelClass }}"/>
                     <div class="card shadow mb-4">
                         <div class="card-body">
-                            <div class="row">
+                            <div class="row g-2">
                                 <div class="col-sm">
                                     <div class="mb-3">
                                         <label for="reference">{{ trans('reference') }}</label>
@@ -62,10 +62,17 @@
                             </table>
                         </div>
                         <div class="card-footer">
-                            <div class="text-end">
-                                <button type="submit" class="btn btn-spin-action btn-primary">
-                                    <i class="fa-solid fa-save"></i> {{ trans('save') }}
-                                </button>
+                            <div class="row">
+                                <div class="col">
+                                    <a href="{{ asset(fsc.model.url()) }}" class="btn btn-spin-action btn-secondary">
+                                        <i class="fa-solid fa-arrow-left me-1"></i> {{ trans('back') }}
+                                    </a>
+                                </div>
+                                <div class="col-auto">
+                                    <button type="submit" class="btn btn-spin-action btn-primary">
+                                        <i class="fa-solid fa-save me-1"></i> {{ trans('save') }}
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </div>
