--- a/Core/View/Master/MenuTemplate.html.twig
+++ b/Core/View/Master/MenuTemplate.html.twig
@@ -114,8 +114,8 @@
                                 </a>
                             </li>
                             <li class="nav-item" title="{{ trans('help') }}">
-                                <a class="nav-link" href="https://facturascripts.com/ayuda" rel="nofollow"
-                                   target="_blank" id="menuIconHelp">
+                                <a class="nav-link" id="menuIconHelp" rel="nofollow" target="_blank"
+                                   href="https://facturascripts.com/ayuda?controller={{ controllerName }}">
                                     <i class="fa-solid fa-question-circle" aria-hidden="true"></i>
                                 </a>
                             </li>
