--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -1,7 +1,7 @@
 {#
 /**
  * This file is part of FacturaScripts
- * Copyright (C) 2021-2023 Carlos Garcia Gomez <carlos@facturascripts.com>
+ * Copyright (C) 2021-2025 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -40,8 +40,11 @@
                             <h1 class="h3 mb-1">
                                 <i class="{{ fsc.getPageData().icon }}"></i> {{ fsc.title }}
                             </h1>
-                            <p class="text-muted mb-4">{{ trans('report-taxes-p') }}</p>
+                            <p class="text-muted mb-4">{{ trans('report-taxes-p') }}.</p>
                             <div class="form-row">
+                                <div class="col-12 h5 border-bottom pb-2 mb-3">
+                                    {{ trans('filters') }}
+                                </div>
                                 {% if fsc.empresa.count() > 1 %}
                                     <div class="col-sm mb-3">
                                         {{ trans('company') }}
@@ -140,6 +143,146 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="form-row">
+                                <div class="col-12 h5 border-bottom pb-2 mb-3">
+                                    {{ trans('columns') }}
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_serie"
+                                               id="column_serie" checked>
+                                        <label class="form-check-label" for="column_serie">
+                                            {{ trans('serie') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_code"
+                                               id="column_code" checked>
+                                        <label class="form-check-label" for="column_code">
+                                            {{ trans('code') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_number2"
+                                               id="column_number2" checked>
+                                        <label class="form-check-label" for="column_number2">
+                                            {{ trans('number') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_name"
+                                               id="column_name" checked>
+                                        <label class="form-check-label" for="column_name">
+                                            {{ trans('name') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_cifnif"
+                                               id="column_cifnif" checked>
+                                        <label class="form-check-label" for="column_cifnif">
+                                            {{ trans('cifnif') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_country"
+                                               id="column_country" checked>
+                                        <label class="form-check-label" for="column_country">
+                                            {{ trans('country') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_net"
+                                               id="column_net" checked>
+                                        <label class="form-check-label" for="column_net">
+                                            {{ trans('net') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_pct_tax"
+                                               id="pct_tax" checked>
+                                        <label class="form-check-label" for="pct_tax">
+                                            {{ trans('pct-tax') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_tax"
+                                               id="column_tax" checked>
+                                        <label class="form-check-label" for="column_tax">
+                                            {{ trans('tax') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_pct_surcharge"
+                                               id="column_pct_surcharge" checked>
+                                        <label class="form-check-label" for="column_pct_surcharge">
+                                            {{ trans('pct-surcharge') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_surcharge" id="column_surcharge" checked>
+                                        <label class="form-check-label" for="column_surcharge">
+                                            {{ trans('surcharge') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_pct_irpf"
+                                               id="column_pct_irpf" checked>
+                                        <label class="form-check-label" for="column_pct_irpf">
+                                            {{ trans('pct-irpf') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_irpf" id="column_irpf" checked>
+                                        <label class="form-check-label" for="column_irpf">
+                                            {{ trans('irpf') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_supplied_amount"
+                                               id="column_supplied_amount" checked>
+                                        <label class="form-check-label" for="column_supplied_amount">
+                                            {{ trans('supplied-amount') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-auto">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_total"
+                                               id="column_total" checked>
+                                        <label class="form-check-label" for="column_total">
+                                            {{ trans('total') }}
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="card-footer">
                             <div class="form-row">
@@ -168,10 +311,18 @@
     {{ parent() }}
     <script>
         function sendReportTaxes(source) {
-            let form = document.getElementById('fReportTaxes');
             animateSpinner('add');
+
+            let form = document.getElementById('fReportTaxes');
             form.source.value = source;
             form.submit();
+
+            // si el formato es excel o csv, esperamos 3 segundos y paramos la animación
+            if (form.format.value === 'XLS' || form.format.value === 'CSV') {
+                setTimeout(function () {
+                    animateSpinner('remove');
+                }, 3000);
+            }
         }
     </script>
 {% endblock %}
