--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -1,7 +1,8 @@
+
 {#
 /**
  * This file is part of FacturaScripts
- * Copyright (C) 2021-2023 Carlos Garcia Gomez <carlos@facturascripts.com>
+ * Copyright (C) 2021-2025 Carlos Garcia Gomez <carlos@facturascripts.com>
  *
  * This program is free software: you can redistribute it and/or modify
  * it under the terms of the GNU Lesser General Public License as
@@ -38,14 +39,14 @@
                     <div class="card shadow mb-3">
                         <div class="card-body">
                             <h1 class="h3 mb-1">
-                                <i class="{{ fsc.getPageData().icon }}"></i> {{ fsc.title }}
+                                <i class="{{ fsc.getPageData().icon }} mr-2"></i> {{ fsc.title }}
                             </h1>
-                            <p class="text-muted mb-4">{{ trans('report-taxes-p') }}</p>
-                            <div class="row">
+                            <p class="text-muted mb-4">{{ trans('report-taxes-p') }}.</p>
+                            <div class="form-row">
                                 {% if fsc.empresa.count() > 1 %}
                                     <div class="col-sm mb-3">
                                         {{ trans('company') }}
-                                        <select name="idempresa" class="form-select">
+                                        <select name="idempresa" class="form-control">
                                             {% for empresa in fsc.empresa.all() %}
                                                 {% if empresa.idempresa == fsc.idempresa %}
                                                     <option value="{{ empresa.idempresa }}" selected>
@@ -64,7 +65,7 @@
                                 {% endif %}
                                 <div class="col-sm mb-3">
                                     {{ trans('serie') }}
-                                    <select name="codserie" class="form-select">
+                                    <select name="codserie" class="form-control">
                                         <option value="">{{ trans('all') }}</option>
                                         <option value="">------</option>
                                         {% for serie in fsc.serie.all({}, {'descripcion': 'ASC'}, 0, 0) %}
@@ -80,7 +81,7 @@
                                 </div>
                                 <div class="col-sm mb-3">
                                     {{ trans('currency') }}
-                                    <select name="coddivisa" class="form-select">
+                                    <select name="coddivisa" class="form-control">
                                         {% for divisa in fsc.divisa.all({}, {'descripcion': 'ASC'}, 0, 0) %}
                                             {% if divisa.coddivisa == fsc.coddivisa %}
                                                 <option value="{{ divisa.coddivisa }}" selected>
@@ -94,7 +95,7 @@
                                 </div>
                                 <div class="col-sm mb-3">
                                     {{ trans('country') }}
-                                    <select name="codpais" class="form-select">
+                                    <select name="codpais" class="form-control">
                                         <option value="">{{ trans('all') }}</option>
                                         <option value="">------</option>
                                         {% for pais in fsc.pais.all({}, {'nombre': 'ASC'}, 0, 0) %}
@@ -109,10 +110,10 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="form-row">
                                 <div class="col-sm-3 mb-3">
                                     {{ trans('date') }}
-                                    <select name="type-date" class="form-select">
+                                    <select name="type-date" class="form-control">
                                         <option value="create" {{ fsc.typeDate == 'create' ? 'selected': '' }}>
                                             {{ trans('creation-date') }}
                                         </option>
@@ -133,25 +134,165 @@
                                 </div>
                                 <div class="col-sm-3 mb-3">
                                     {{ trans('format') }}
-                                    <select name="format" class="form-select">
+                                    <select name="format" class="form-control">
                                         <option value="PDF">PDF</option>
                                         <option value="CSV">CSV</option>
                                         <option value="XLS">Excel</option>
                                     </select>
                                 </div>
                             </div>
+                            <div class="form-row">
+                                <div class="col-12 h5 border-bottom pt-4 pb-2">
+                                    <i class="fa-solid fa-list-check mr-1"></i> {{ trans('columns') }}
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_serie"
+                                               id="column_serie" checked>
+                                        <label class="form-check-label" for="column_serie">
+                                            {{ trans('serie') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_code"
+                                               id="column_code" checked>
+                                        <label class="form-check-label" for="column_code">
+                                            {{ trans('code') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_number2"
+                                               id="column_number2" checked>
+                                        <label class="form-check-label" for="column_number2">
+                                            {{ trans('number') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_name"
+                                               id="column_name" checked>
+                                        <label class="form-check-label" for="column_name">
+                                            {{ trans('name') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_cifnif"
+                                               id="column_cifnif" checked>
+                                        <label class="form-check-label" for="column_cifnif">
+                                            {{ trans('cifnif') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_country"
+                                               id="column_country" checked>
+                                        <label class="form-check-label" for="column_country">
+                                            {{ trans('country') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_net"
+                                               id="column_net" checked>
+                                        <label class="form-check-label" for="column_net">
+                                            {{ trans('net') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_pct_tax"
+                                               id="pct_tax" checked>
+                                        <label class="form-check-label" for="pct_tax">
+                                            {{ trans('pct-tax') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_tax"
+                                               id="column_tax" checked>
+                                        <label class="form-check-label" for="column_tax">
+                                            {{ trans('tax') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_pct_surcharge"
+                                               id="column_pct_surcharge" checked>
+                                        <label class="form-check-label" for="column_pct_surcharge">
+                                            {{ trans('pct-surcharge') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_surcharge" id="column_surcharge" checked>
+                                        <label class="form-check-label" for="column_surcharge">
+                                            {{ trans('surcharge') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_pct_irpf"
+                                               id="column_pct_irpf" checked>
+                                        <label class="form-check-label" for="column_pct_irpf">
+                                            {{ trans('pct-irpf') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1"
+                                               name="column_irpf" id="column_irpf" checked>
+                                        <label class="form-check-label" for="column_irpf">
+                                            {{ trans('irpf') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_supplied_amount"
+                                               id="column_supplied_amount" checked>
+                                        <label class="form-check-label" for="column_supplied_amount">
+                                            {{ trans('supplied-amount') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_total"
+                                               id="column_total" checked>
+                                        <label class="form-check-label" for="column_total">
+                                            {{ trans('total') }}
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="card-footer">
-                            <div class="row">
+                            <div class="form-row">
                                 <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('purchases')"
-                                            class="btn btn-spin-action w-100 btn-secondary btn-spin-action">
+                                            class="btn btn-lg btn-block btn-secondary btn-spin-action">
                                         {{ trans('purchases') }}
                                     </button>
                                 </div>
                                 <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('sales')"
-                                            class="btn btn-spin-action w-100 btn-primary btn-spin-action">
+                                            class="btn btn-lg btn-block btn-primary btn-spin-action">
                                         {{ trans('sales') }}
                                     </button>
                                 </div>
@@ -168,10 +309,18 @@
     {{ parent() }}
     <script>
         function sendReportTaxes(source) {
-            let form = document.getElementById('fReportTaxes');
             animateSpinner('add');
+
+            let form = document.getElementById('fReportTaxes');
             form.source.value = source;
             form.submit();
+
+            // si el formato es excel o csv, esperamos 3 segundos y paramos la animación
+            if (form.format.value === 'XLS' || form.format.value === 'CSV') {
+                setTimeout(function () {
+                    animateSpinner('remove');
+                }, 3000);
+            }
         }
     </script>
 {% endblock %}
