Solucionado bug al imprimir la fecha en el informe de impuestos.

--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -173,6 +173,15 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="1" name="column_date"
+                                               id="column_date" checked>
+                                        <label class="form-check-label" for="column_date">
+                                            {{ trans('date') }}
+                                        </label>
+                                    </div>
+                                </div>
+                                <div class="col-sm-2">
+                                    <div class="form-check">
                                         <input class="form-check-input" type="checkbox" value="1" name="column_name"
                                                id="column_name" checked>
                                         <label class="form-check-label" for="column_name">
