fix: width max to buttons

--- a/Core/View/ReportTaxes.html.twig
+++ b/Core/View/ReportTaxes.html.twig
@@ -292,16 +292,16 @@
                             </div>
                         </div>
                         <div class="card-footer">
-                            <div class="row">
-                                <div class="col-sm d-flex justify-content-center">
+                            <div class="row justify-content-start">
+                                <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('purchases')"
-                                            class="btn btn-lg btn-block btn-secondary btn-spin-action">
+                                            class="btn btn-lg btn-block btn-secondary btn-spin-action w-100">
                                         {{ trans('purchases') }}
                                     </button>
                                 </div>
-                                <div class="col-sm d-flex justify-content-center">
+                                <div class="col-sm">
                                     <button type="button" onclick="sendReportTaxes('sales')"
-                                            class="btn btn-lg btn-block btn-primary btn-spin-action">
+                                            class="btn btn-lg btn-block btn-primary btn-spin-action w-100">
                                         {{ trans('sales') }}
                                     </button>
                                 </div>
