Actualizada la versión de PHP requerida y mejorada la gestión de cookies en el controlador. Se añadieron nuevas traducciones y se realizaron ajustes en el archivo de instalación.

--- a/Core/View/Installer/Install.html.twig
+++ b/Core/View/Installer/Install.html.twig
@@ -99,7 +99,7 @@
     </div>
 </nav>
 <div class="container-fluid">
-    <div class="row">
+    <div class="row align-items-center">
         <div class="col-lg-6 col-md-5 text-center mb-4 mb-md-0">
             <img src="Core/Assets/Images/install.png" alt="{{ trans('installer') }}" class="img-fluid"
                  style="max-width: 100%; height: auto;">
